changed height to min-height: 100% to avoid white spaces when scrolling

--- a/public/css/master_bulma.css
+++ b/public/css/master_bulma.css
@@ -4,7 +4,7 @@ body {
   background-size: cover;
   padding-top: 100px;
   padding-bottom: 30px;
-  height: 100%;
+  min-height: 100%;
 }
 
 .navbar-item img {
